[package]
name = "cw20-multisender"
version = "0.1.0"
authors = ["mktia <19624453+mktia@users.noreply.github.com>"]
edition = "2018"
license = "Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw0 = { path = "../../packages/cw0", version = "0.6.0-alpha1" }
cw2 = { path = "../../packages/cw2", version = "0.6.0-alpha1" }
cw20 = { path = "../../packages/cw20", version = "0.6.0-alpha1" }
cosmwasm-std = { version = "0.14.0-beta1", features = ["iterator"] }
cw-storage-plus = { path = "../../packages/storage-plus", version = "0.6.0-alpha1", features = ["iterator"] }
schemars = "0.7"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.20" }

[dev-dependencies]
cosmwasm-schema = { version = "0.14.0-beta1" }
cw-multi-test = { path = "../../packages/multi-test", version = "0.6.0-alpha1" }
cw20-base = { path = "../cw20-base", version = "0.6.0-alpha1", features = ["library"] }
